--- a/desktop.html
+++ b/desktop.html
@@ -266,6 +266,7 @@
                 </div>
             </div>
             <div class="footer-copyright">
+                <a href="admin.html" style="color: inherit; font-size: 0.8rem; opacity: 0.5;">Admin Login</a><br><br>
                 © 2024 Pete's Holiday Lighting. All rights reserved.
             </div>
         </footer>
