fix attempt for in-house hub system

--- a/public/admin.html
+++ b/public/admin.html
@@ -85,13 +85,12 @@
         </div>
     </div>
 
-
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
 
     <script src="js/config.js"></script>
-    <script src="js/firebase-logic.js"></script>
+    <script src="js/firebase-admin-logic.js"></script>
     <script src="js/admin.js"></script>
 </body>
 </html>
