--- a/public/index.html
+++ b/public/index.html
@@ -238,7 +238,6 @@
                 </div>
 
                 <form class="contact-form animate-on-scroll" id="contact-form" name="holiday-lighting-quote" method="POST">
-                    <input type="hidden" name="form-name" value="holiday-lighting-quote" />
                     <div class="form-grid">
                         <div class="form-group">
                             <label for="first-name">First Name</label>
@@ -257,12 +256,10 @@
                             <input type="tel" id="phone" name="phone" required>
                         </div>
                         <div class="form-group full-width">
-                            <label for="street">Street Address</label>
-                            <input type="text" id="street" name="street" required>
-                        </div>
-                         <div class="form-group full-width">
-                            <label for="city">City</label>
-                            <input type="text" id="city" name="city" required>
+                            <label for="full-address">Full Address</label>
+                            <input type="text" id="full-address" placeholder="Start typing your address..." required>
+                            <input type="hidden" id="address-storage" name="address">
+                            <input type="hidden" id="city-storage" name="city">
                         </div>
                         <div class="form-group full-width">
                             <label for="referral">How did you hear about us?</label>
@@ -427,6 +424,6 @@
     <script src="js/config.js"></script>
     <script src="js/firebase-logic.js"></script>
     <script src="js/script.js"></script>
-
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrnGnkJHLdSLX_ty69jo0qGGvbN0i94PU&libraries=places&callback=initAutocomplete" async defer></script>
 </body>
 </html>
