--- a/public/desktop.html
+++ b/public/desktop.html
@@ -201,11 +201,17 @@
                                 <div class="form-group"><label for="email-desktop">Email Address</label><input type="email" id="email-desktop" name="email" required></div>
                                 <div class="form-group"><label for="phone-desktop">Phone Number</label><input type="tel" id="phone-desktop" name="phone" required></div>
                                 <div class="form-group full-width">
-                                    <label for="full-address-desktop">Full Address</label>
-                                    <input type="text" id="full-address-desktop" placeholder="Start typing your address..." required>
-                                    <input type="hidden" id="address-storage-desktop" name="address">
-                                    <input type="hidden" id="city-storage-desktop" name="city">
+                                    <label for="full-address-desktop">Street Address</label>
+                                    <input type="text" id="full-address-desktop" name="full-address-desktop" placeholder="Start typing your address..." required>
                                 </div>
+                                <div class="form-group full-width">
+                                    <label for="apt-suite-desktop">Apartment, suite, etc. (optional)</label>
+                                    <input type="text" id="apt-suite-desktop" name="apt-suite">
+                                </div>
+                                <input type="hidden" id="address-storage-desktop" name="address">
+                                <input type="hidden" id="city-storage-desktop" name="city">
+                                <input type="hidden" id="zip-storage-desktop" name="zip">
+
                                 <div class="form-group full-width">
                                     <label for="referral-desktop">How did you hear about us?</label>
                                     <select id="referral-desktop" name="referral"><option>Google</option><option>Facebook</option><option>Instagram</option><option>Friend/Family</option><option>Saw your work</option><option>Other</option></select>
@@ -326,5 +332,6 @@
     <script src="js/firebase-logic.js"></script>
     <script src="js/desktop_script.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrnGnkJHLdSLX_ty69jo0qGGvbN0i94PU&libraries=places&callback=initAllAutocompletes" async defer></script>
+
 </body>
 </html>
