--- a/public/index.html
+++ b/public/index.html
@@ -256,11 +256,17 @@
                             <input type="tel" id="phone" name="phone" required>
                         </div>
                         <div class="form-group full-width">
-                            <label for="full-address">Full Address</label>
-                            <input type="text" id="full-address" placeholder="Start typing your address..." required>
-                            <input type="hidden" id="address-storage" name="address">
-                            <input type="hidden" id="city-storage" name="city">
+                            <label for="full-address">Street Address</label>
+                            <input type="text" id="full-address" name="full-address" placeholder="Start typing your address..." required>
                         </div>
+                        <div class="form-group full-width">
+                            <label for="apt-suite">Apartment, suite, etc. (optional)</label>
+                            <input type="text" id="apt-suite" name="apt-suite">
+                        </div>
+                        <input type="hidden" id="address-storage" name="address">
+                        <input type="hidden" id="city-storage" name="city">
+                        <input type="hidden" id="zip-storage" name="zip">
+                        
                         <div class="form-group full-width">
                             <label for="referral">How did you hear about us?</label>
                             <select id="referral" name="referral">
@@ -424,6 +430,6 @@
     <script src="js/config.js"></script>
     <script src="js/firebase-logic.js"></script>
     <script src="js/script.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrnGnkJHLdSLX_ty69jo0qGGvbN0i94PU&libraries=places&callback=initAutocomplete" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrnGnkJHLdSLX_ty69jo0qGGvbN0i94PU&libraries=places&callback=initAllAutocompletes" async defer></script>
 </body>
 </html>
