added modal for apt-suite fields

--- a/public/admin.html
+++ b/public/admin.html
@@ -85,6 +85,14 @@
         </div>
     </div>
 
+    <div class="modal-overlay" id="info-modal-overlay">
+        <div class="modal-panel" id="info-modal-panel">
+            <button class="modal-close-btn">&times;</button>
+            <h3>Additional Address Info</h3>
+            <p>This address includes an apartment or suite number. Please see the "Details" view for the complete address.</p>
+        </div>
+    </div>
+
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
