--- a/public/desktop.html
+++ b/public/desktop.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pete's Holiday Lighting - Desktop</title>
+    <link rel="icon" href="assets/images/lights/logo.webp" type="image/webp">
 
     <script>
       // Redirect to mobile version if screen is too narrow
@@ -51,7 +52,8 @@
 
             <section class="page active" id="page-home">
                 <div class="hero-section">
-                    <div class="hero-background"></div>
+                    <div class="hero-slideshow">
+                        </div>
                     <div class="hero-content">
                         <h1>Southern California’s Premier Christmas Light Installation Experts</h1>
                         <p>A truly effortless holiday experience with custom designs, professional installation, and proactive maintenance. Let us make your season shine.</p>
@@ -331,7 +333,7 @@
     <script src="js/config.js"></script>
     <script src="js/firebase-logic.js"></script>
     <script src="js/desktop_script.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrnGnkJHLdSLX_ty69jo0qGGvbN0i94PU&libraries=places&callback=initAllAutocompletes" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places&callback=initAllAutocompletes" async defer></script>
 
 </body>
 </html>
