--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Pete's Holiday Lighting</title>
+    <link rel="icon" href="assets/images/lights/logo.webp" type="image/webp">
 
     <script>
       // Redirect to desktop version if screen is wide enough
@@ -41,6 +42,10 @@
 
             <main class="page-content">
                 <section class="hero">
+                    <video class="hero-background" autoplay muted loop playsinline poster="assets/images/lights/pic15.jpg">
+                        <source src="assets/videos/hero.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
                     <div class="hero-content">
                         <img src="assets/images/lights/logo.webp" alt="Pete's Holiday Lighting Logo" class="hero-logo">
                         <h2 class="home-hero-subtitle">Southern California’s Premier Christmas Light Installation Experts</h2>
@@ -430,6 +435,6 @@
     <script src="js/config.js"></script>
     <script src="js/firebase-logic.js"></script>
     <script src="js/script.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrnGnkJHLdSLX_ty69jo0qGGvbN0i94PU&libraries=places&callback=initAllAutocompletes" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places&callback=initAllAutocompletes" async defer></script>
 </body>
 </html>
