changed hero and hopefully everything else is good

--- a/public/desktop.html
+++ b/public/desktop.html
@@ -52,8 +52,8 @@
 
             <section class="page active" id="page-home">
                 <div class="hero-section">
-                    <lottie-player id="hero-santa-sleigh" src="assets/lottie/santa-sleigh.json" background="transparent" speed="1" loop autoplay></lottie-player>
-                    <lottie-player id="hero-let-it-snow" src="assets/lottie/Let-it-snow.json" background="transparent" speed="1" loop autoplay></lottie-player>
+                    <div class="hero-background-image"></div>
+                    <lottie-player id="hero-let-it-snow" src="assets/lottie/Let-it-snow.json" background="transparent" speed="0.5" loop autoplay></lottie-player>
                     <div class="hero-content">
                         <h1>Southern California’s Premier Christmas Light Installation Experts</h1>
                         <p>A truly effortless holiday experience with custom designs, professional installation, and proactive maintenance. Let us make your season shine.</p>
