added the confirmation message on desktop after the humourous phrase

--- a/public/desktop.html
+++ b/public/desktop.html
@@ -294,14 +294,15 @@
     </div>
 
     <div class="modal-overlay" id="form-success-modal-overlay">
-        <div class="modal-panel" id="form-success-modal-panel">
-             <button class="modal-close-btn">&times;</button>
-             <div class="success-icon-wrapper"><i class="fa-solid fa-check"></i></div>
-             <h3 id="form-success-title">You're on the Nice List!</h3>
-             <p id="form-success-message">Your consultation request is on its way. We're warming up the ladders and will be in touch shortly!</p>
-             <button id="form-success-return-btn" class="btn btn-primary">Back to Home</button>
-        </div>
+    <div class="modal-panel" id="form-success-modal-panel">
+         <button class="modal-close-btn">&times;</button>
+         <div class="success-icon-wrapper"><i class="fa-solid fa-check"></i></div>
+         <h3 id="form-success-title">You're on the Nice List!</h3>
+         <p id="form-success-message">Your consultation request is on its way. We're warming up the ladders and will be in touch shortly!</p>
+         <p class="form-success-note">We'll be in contact with you very shortly!</p>
+         <button id="form-success-return-btn" class="btn btn-primary">Back to Home</button>
     </div>
+</div>
     
     <div class="modal-overlay" id="locations-modal-overlay">
         <div class="locations-modal" id="locations-modal">
