--- a/public/index.html
+++ b/public/index.html
@@ -276,6 +276,7 @@
                                 <option>Instagram</option>
                                 <option>Friend/Family</option>
                                 <option>Saw your work</option>
+                                <option>Saw a sign</option>
                                 <option>Other</option>
                             </select>
                         </div>
