rearrange desktop options to match mobile regarding how did you hear about us

--- a/public/desktop.html
+++ b/public/desktop.html
@@ -216,7 +216,7 @@
 
                                 <div class="form-group full-width">
                                     <label for="referral-desktop">How did you hear about us?</label>
-                                    <select id="referral-desktop" name="referral"><option>Google</option><option>Facebook</option><option>Saw a sign</option><option>Instagram</option><option>Friend/Family</option><option>Saw your work</option><option>Other</option></select>
+                                    <select id="referral-desktop" name="referral"><option>Google</option><option>Facebook</option><option>Instagram</option><option>Friend/Family</option><option>Saw a sign</option><option>Saw your work</option><option>Other</option></select>
                                 </div>
                                 <div class="form-group full-width">
                                     <div class="checkbox-group"><input type="checkbox" id="contact-permission-desktop" name="contact-permission" checked required><label for="contact-permission-desktop">By checking this box, you agree that Pete's Holiday Lighting may contact you regarding your service inquiry.</label></div>
