testing phone number logic

--- a/public/desktop.html
+++ b/public/desktop.html
@@ -201,7 +201,7 @@
                                 <div class="form-group"><label for="first-name-desktop">First Name</label><input type="text" id="first-name-desktop" name="first-name" required></div>
                                 <div class="form-group"><label for="last-name-desktop">Last Name</label><input type="text" id="last-name-desktop" name="last-name" required></div>
                                 <div class="form-group"><label for="email-desktop">Email Address</label><input type="email" id="email-desktop" name="email" required></div>
-                                <div class="form-group"><label for="phone-desktop">Phone Number</label><input type="tel" id="phone-desktop" name="phone" required></div>
+                                <div class="form-group"><label for="phone-desktop">Phone Number</label><input type="tel" id="phone-desktop" name="phone" placeholder="( ___ ) ___ - ____" maxlength="14" required></div>
                                 <div class="form-group full-width">
                                     <label for="full-address-desktop">Street Address <button type="button" class="text-btn" id="why-address-btn-desktop">(Why do we need this?)</button></label>
                                     <input type="text" id="full-address-desktop" name="full-address-desktop" placeholder="Start typing your address..." required>
