--- a/public/index.html
+++ b/public/index.html
@@ -254,7 +254,7 @@
                         </div>
                         <div class="form-group">
                             <label for="phone">Phone Number</label>
-                            <input type="tel" id="phone" name="phone" required>
+                            <input type="tel" id="phone" name="phone" placeholder="( ___ ) ___ - ____" maxlength="14" required>
                         </div>
                         <div class="form-group full-width">
                             <label for="full-address">Street Address <button type="button" class="text-btn" id="why-address-btn">(Why do we need this?)</button></label>
