testing phone number logic-part4

--- a/public/desktop.html
+++ b/public/desktop.html
@@ -341,6 +341,17 @@
             </div>
         </div>
     </div>
+    
+    <div class="modal-overlay" id="phone-alert-modal-overlay-desktop">
+        <div class="modal-panel" id="phone-alert-modal-panel-desktop">
+            <button class="modal-close-btn" id="phone-alert-close-btn-desktop">&times;</button>
+            <div id="phone-alert-modal-content-desktop">
+                <h3>Incomplete Phone Number</h3>
+                <p>Please enter a valid 10-digit phone number to continue.</p>
+                <button type="button" class="btn btn-primary cta-btn" id="phone-alert-okay-btn-desktop">Okay</button>
+            </div>
+        </div>
+    </div>
 
     <div class="modal-overlay" id="address-info-modal-overlay-desktop">
         <div class="modal-panel" id="address-info-modal-panel-desktop">
