--- a/public/index.html
+++ b/public/index.html
@@ -415,6 +415,16 @@
         </div>
     </div>
 
+    <div id="phone-alert-modal-overlay"></div>
+    <div id="phone-alert-modal-panel">
+        <button class="modal-close-btn" id="phone-alert-close-btn">&times;</button>
+        <div id="phone-alert-modal-content">
+            <h3>Incomplete Phone Number</h3>
+            <p>Please enter a valid 10-digit phone number to continue.</p>
+            <button type="button" class="btn btn-primary cta-btn" id="phone-alert-okay-btn">Okay</button>
+        </div>
+    </div>
+
     <div id="address-info-modal-overlay"></div>
     <div id="address-info-modal-panel">
         <button class="modal-close-btn" id="address-info-close-btn">&times;</button>
